--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Reshma R # your name (or website title) here
+logo: "/images/myAvatar (1).svg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Hi! My name is Reshma.
+  I am a software engineer with a passion to learn, apply and enhance my skills by being hands-on with technology.
+  Welcome to my portfolio page. Here, you can check out some data analytics projects I have worked on.
   <br><br>
-  Second description 
-  <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/reshma-ramaprasad/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+google_analytics: UA-167701305-1 # your Google Analytics tracking ID here
