--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Reshma R # your name (or website title) here
-logo: "/images/myAvatar (1).svg?raw=true" # your photo (or logo) here
+logo: "/images/circleAvatar.gif?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br>
   Hi! My name is Reshma.<br>
